--- a/app/src/main/res/menu/user_profile_toolbar.xml
+++ b/app/src/main/res/menu/user_profile_toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_edit_user_profile"
+        android:id="@+id/action_edit"
         android:title="Edit"
         app:showAsAction="ifRoom"
         android:icon="@drawable/edit"/>
