--- a/app/src/main/res/layout/activity_pet_care_provider_registeration.xml
+++ b/app/src/main/res/layout/activity_pet_care_provider_registeration.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ahmedbass.mypetfriend.PetCareProviderRegisterationActivity">
+    tools:context="com.ahmedbass.mypetfriend.PetCareProviderRegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
-                android:gravity="bottom"
+                android:gravity="top"
                 android:layout_marginTop="5dp"
                 android:hint="Tell a little about yourself and describe your pet care experience and qualifications."
                 android:selectAllOnFocus="true" />
@@ -297,7 +297,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/saveProfile_btn"
+            android:id="@+id/publishAdvert_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Save"
