--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/action_settings"
-        android:title="Settings"
-        android:icon="@drawable/ic_settings_white_24dp"
+        android:title="Account"
+        android:icon="@drawable/user1"
         app:showAsAction="ifRoom" />
 
 </menu>
